{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "Player",
            "id": "3bf3b994-51e7-4cd2-843f-f635f888e1c8",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "57c9668b-cce6-4f52-a383-a2f5651af94e",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "BuildMode",
                    "type": "Button",
                    "id": "248fae67-2b54-4376-8270-324cb9247f86",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpawnObj",
                    "type": "Button",
                    "id": "34059a87-2f73-483b-b746-522ed8a4f311",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DespawnObj",
                    "type": "Button",
                    "id": "25119fb1-837c-40f6-ab2c-b76f78705792",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BuildUI",
                    "type": "Button",
                    "id": "e2bdf7a5-15a6-4783-9e68-664129bd90db",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Wheel",
                    "type": "Value",
                    "id": "1c6a3957-7050-4a26-b883-c83dea5852e7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "3D Vector",
                    "id": "b9788a8d-e865-4166-8371-80ffb85c31f8",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "58a6b77e-ef10-427d-8a0e-8d7a8ec8bd38",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5cb37c6a-ed2c-4597-8683-bec586731d2b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "688edee6-7517-45c1-b9d3-6b44e3b15be0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "f09f9af3-f12b-4ed2-802d-bb0cdc651627",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7e733cc0-f621-43b5-97fd-1a4ec7c64061",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuildMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5c66417-acc6-48f2-a840-8379e36aab28",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnObj",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "08feed90-d3d2-4ca7-9887-d252e62b6c07",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DespawnObj",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b77135e-c8af-469a-bf7f-36e984a5200d",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuildUI",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3019d727-4ece-4894-a119-07cc1cc5cb14",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Wheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "7342499e-ba71-4fa9-a301-787106eef947",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "7661de07-7645-4d73-a928-4aa05ed4f7a2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Use",
                    "type": "Button",
                    "id": "56fb0dbf-c8d5-480f-9413-58a8ec54a395",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "db0ac665-c43c-4ceb-ab24-1132c4c41370",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "719a5a74-e892-4fa4-9bcb-1c0998814aa9",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Use",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyBoardMouse",
            "bindingGroup": "KeyBoardMouse",
            "devices": []
        }
    ]
}